--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,21 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+
+
+*.class
+*.jar
+*.war
+*.ear
+*.prefs
+*.project
+*.setting/
+*.settings/
+*.classpath
+
+*.metadata/
+Servers/
+
+
+
