--- a/ebusiness-master/ebusiness-report/pom.xml
+++ b/ebusiness-master/ebusiness-report/pom.xml
@@ -42,6 +42,10 @@
 			<artifactId>mahout-core</artifactId>
 		</dependency>
 		<dependency>
+				<groupId>org.postgresql</groupId>
+				<artifactId>postgresql</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>jdk.tools</groupId>
 			<artifactId>jdk.tools</artifactId>
 			<version>1.6</version>
