整理项目结构，有etl层抽取出来，新增一个商品名称辅助层
商品名称辅助层实现的功能很简单，就是根据贝叶斯分类器的结果检查商品名称在该类别下的概率，从而对商品名称做出改进

--- a/ebusiness-master/ebusiness-assist/pom.xml
+++ b/ebusiness-master/ebusiness-assist/pom.xml
@@ -8,8 +8,8 @@
 		<artifactId>ebusiness-master</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>ebusiness-report</artifactId>
-	<name>ebusiness-report</name>
+	<artifactId>ebusiness-assist</artifactId>
+	<name>ebusiness-assist</name>
 	<url>http://maven.apache.org</url>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -33,12 +33,16 @@
 			<artifactId>hadoop-client</artifactId>
 		</dependency>
 		<dependency>
-				<groupId>org.postgresql</groupId>
-				<artifactId>postgresql</artifactId>
+			<groupId>org.apache.mahout</groupId>
+			<artifactId>mahout-core</artifactId>
 		</dependency>
 		<dependency>
-				<groupId>com.ebusiness</groupId>
-				<artifactId>ebusiness-etl</artifactId>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.ebusiness</groupId>
+			<artifactId>ebusiness-etl</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>jdk.tools</groupId>
@@ -47,5 +51,5 @@
 			<scope>system</scope>
 			<systemPath>${JAVA_HOME}/lib/tools.jar</systemPath>
 		</dependency>
-	</dependencies>
+</dependencies>
 </project>
