利用庖丁解牛实现中文分词，并生成mahout贝叶斯分类器所需要的格式

--- a/ebusiness-master/ebusiness-assist/pom.xml
+++ b/ebusiness-master/ebusiness-assist/pom.xml
@@ -45,11 +45,29 @@
 			<artifactId>ebusiness-etl</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>net.paoding</groupId>
+			<artifactId>paoding-analysis</artifactId>
+			<version>3</version>
+			<type>jar</type>
+		</dependency>
+		<dependency>
+			<groupId>net.paoding</groupId>
+			<artifactId>paoding-analysis</artifactId>
+			<version>2.0.4</version>
+			<type>jar</type>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.lucene</groupId>
+			<artifactId>lucene-core</artifactId>
+			<version>2.2.0</version>
+			<type>jar</type>
+		</dependency>
+		<dependency>
 			<groupId>jdk.tools</groupId>
 			<artifactId>jdk.tools</artifactId>
 			<version>1.6</version>
 			<scope>system</scope>
 			<systemPath>${JAVA_HOME}/lib/tools.jar</systemPath>
 		</dependency>
-</dependencies>
+	</dependencies>
 </project>
