--- a/ebusiness-master/ebusiness-assist/pom.xml
+++ b/ebusiness-master/ebusiness-assist/pom.xml
@@ -33,6 +33,10 @@
 			<artifactId>hadoop-client</artifactId>
 		</dependency>
 		<dependency>
+				<groupId>org.apache.mahout</groupId>
+				<artifactId>mahout-integration</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.mahout</groupId>
 			<artifactId>mahout-core</artifactId>
 		</dependency>
@@ -59,7 +63,7 @@
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
 			<artifactId>lucene-core</artifactId>
-			<version>2.2.0</version>
+			<version>4.6.1</version>
 			<type>jar</type>
 		</dependency>
 		<dependency>
